--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -5,7 +5,7 @@ SRCDIR = ..
 # and then add a name_SRC line that lists its source files.
 PROGS = cat cmp cp echo halt hex-dump ls mcat mcp mkdir pwd rm shell \
 	bubsort insult lineup matmult recursor \
-	sumargv lab2test lab1test lab1test2 pfs pfs_reader pfs_writer dummy longrun \
+	sumargv lab4test1 lab3test2 lab3test1 lab2test lab1test lab1test2 pfs pfs_reader pfs_writer dummy longrun \
 	child parent create-bad printf
 
 # Added test programs
@@ -41,11 +41,14 @@ bubsort_SRC = bubsort.c
 matmult_SRC = matmult.c
 mcat_SRC = mcat.c
 mcp_SRC = mcp.c
+lab3test1_SRC = lab3test1.c
+lab3test2_SRC = lab3test2.c
 
 # Should work in project 4.
 mkdir_SRC = mkdir.c
 pwd_SRC = pwd.c
 shell_SRC = shell.c
+lab4test1_SRC = lab4test1.c
 
 include $(SRCDIR)/Make.config
 include $(SRCDIR)/Makefile.userprog
